--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <h2>- aktywizacja i integracja lokalnej społeczności poprzez aktywność fizyczną</h2>
                         <h2>-Uczczenie Maryi jako Królowej Polski</h2>
                     </p>
-                    <a href="#" class="cta">Download Resume</a>
+                    <a href="Regulamin.docx" class="cta">Regulamin</a>
                 </div>
             </div>
         </section>
