--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="nav-bar">
                 <div class="brand">
                     <a href="#hero">
-                        <h1><span>I </span>Bieg <span>M</span>aryjny</h1>
+                      <h1><span><font face="army">I </font></span>Bieg <span>M</span>aryjny</h1>
                     </a>
                 </div>
                 <div class="nav-list">
