--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="hero container">
             <div>
                 <h1>Zapraszamy, <span></span></h1>
-                <h1>na <font face="army" size="30rem">I</font> Bieg <span></span></h1>
+                <h1>na <font face="army" size="20">I</font> Bieg <span></span></h1>
                 <h1>Maryjny <span></span></h1>
                 <a href="#projects" type="button" class="cta">informacje</a>
             </div>
@@ -220,8 +220,8 @@
                         <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
                         <div class="contact-info">
                             <h1>Email</h1>
-                            <h2>info@gmail.com</h2>
-                            <h2>abcd@gmail.com</h2>
+                            <h2>biegmaryjny@wp.pl</h2>
+                            
                         </div>
                     </div>
                     <div class="contact-item">
