--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="hero container">
             <div>
                 <h1>Zapraszamy, <span></span></h1>
-                <h1>na <font face="army" color="deepskyblue" >I</font> Bieg <span></span></h1>
+                <h1>na <font face="army">I</font> Bieg <span></span></h1>
                 <h1>Maryjny <span></span></h1>
                 <a href="#projects" type="button" class="cta">informacje</a>
             </div>
