--- a/index.html
+++ b/index.html
@@ -58,42 +58,10 @@
                     voluptatum explicabo!
                 </p>
             </div>
-            <div class="service-bottom">
-                <div class="service-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-                    <h2>Web Design</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-                        architecto placeat beatae tenetur officia quod
-                    </p>
-                </div>
-                <div class="service-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-                    <h2>Web Design</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-                        architecto placeat beatae tenetur officia quod
-                    </p>
-                </div>
-                <div class="service-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-                    <h2>Web Design</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-                        architecto placeat beatae tenetur officia quod
-                    </p>
-                </div>
-                <div class="service-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-                    <h2>Web Design</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-                        architecto placeat beatae tenetur officia quod
-                    </p>
-                </div>
-            </div>
+            <div> 
+               <center><a href="https://elektronicznezapisy.pl" type="button" class="da">zapisy</a> </center>
         </div>
-        <center><a href="https://elektronicznezapisy.pl" type="button" class="da">zapisy</a> </center>
+       
 </section>
     <!-- End Service Section -->
     
